Closed
Bug 418216
Opened 18 years ago
Closed 18 years ago
Back button greys when toolbar reset to default
Categories
(Firefox :: Toolbars and Customization, defect, P3)
Firefox
Toolbars and Customization
Tracking
()
VERIFIED
FIXED
Firefox 3 beta4
People
(Reporter: benwishaw, Assigned: arno)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files, 1 obsolete file)
|
1.01 KB,
application/vnd.mozilla.xul+xml
|
Details | |
|
3.65 KB,
patch
|
arno
:
review+
arno
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre) Gecko/2008021704 Minefield/3.0b4pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre) Gecko/2008021704 Minefield/3.0b4pre
When the toolbar is reset to defaults the back navigation button becomes greyed. The drop down list is still available though. If a new tab is opened and navigated with the the back button becomes reactivated in the new tab and the one it was in when greyed initially.
Reproducible: Always
Steps to Reproduce:
To break
1.Right click and select customize toolbar
2. Click restore default set button
To fix
1. Open new tab
2. use it to navigate the web
Actual Results:
To break - the back button became greyed
To fix - the back button returned to green
Expected Results:
The back button to remain green
This was a fresh install of minefield with no add ons or plug ins.
| Reporter | ||
Comment 1•18 years ago
|
||
This does not occur in Ubuntu - Gutsy
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b3pre) Gecko/2008020507 Firefox/3.0b3pre
Comment 2•18 years ago
|
||
Confirmed with latest trunk on Windows XP.
Severity: minor → normal
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Comment 3•18 years ago
|
||
Blocks: 414907
Keywords: regression
Updated•18 years ago
|
Flags: blocking-firefox3?
Updated•18 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P3
| Assignee | ||
Comment 4•18 years ago
|
||
when toolbar is created, toolbar.palette gets a reference to back-button, then back-button is removed from document.
When toolbar is reset, previously saved back-button is inserted.
Unfortunately, if Browser:Back "disabled" attribute has been deleted, that removal is not transfered to back-button.
| Assignee | ||
Comment 5•18 years ago
|
||
Comment 6•18 years ago
|
||
Comment on attachment 304920 [details] [diff] [review]
patch v1
Neil, does this approach look right?
Attachment #304920 -
Flags: review?(enndeakin)
Comment 7•18 years ago
|
||
Comment on attachment 304920 [details] [diff] [review]
patch v1
>+ } else {
>+ listener->UnsetAttr(kNameSpaceID_None, name,
>+ mInitialLayoutComplete);
The indenting should line up.
>+<box id="container">
>+<textbox id="item">
>+ <observes element="broadcaster" attribute="disabled"/>
>+</textbox>
>+</box>
It would also be good to test other forms for observing as well, like the observes or command attributes.
Going to accept this, but let's get another Neil to superreview.
Attachment #304920 -
Flags: superreview?(neil)
Attachment #304920 -
Flags: review?(enndeakin)
Attachment #304920 -
Flags: review+
Comment 8•18 years ago
|
||
Comment on attachment 304920 [details] [diff] [review]
patch v1
Whoops, that got overlooked in the fix for bug 414907 :-(
It's a good thing toolkit's sucky toolbar customisation code removes nodes from the DOM otherwise nobody would have noticed ;-)
Attachment #304920 -
Flags: superreview?(neil) → superreview+
Updated•18 years ago
|
Assignee: nobody → arenevier
| Assignee | ||
Comment 9•18 years ago
|
||
> It would also be good to test other forms for observing as well, like the
> observes or command attributes.
With an <observe>, you can check if observed attribute has been removed from
broadcaster. With a <command> or <broadcaster>, as "*" is observed, you cannot
known if a specific attribute was present before, and has been removed.
| Assignee | ||
Comment 10•18 years ago
|
||
same patch, identation modified as requested in comment 7.
carrying over r and sr
Attachment #304920 -
Attachment is obsolete: true
Attachment #305189 -
Flags: superreview+
Attachment #305189 -
Flags: review+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 11•18 years ago
|
||
Checking in content/xul/document/src/nsXULDocument.cpp;
/cvsroot/mozilla/content/xul/document/src/nsXULDocument.cpp,v <-- nsXULDocument.cpp
new revision: 1.809; previous revision: 1.808
done
Checking in content/xul/document/test/Makefile.in;
/cvsroot/mozilla/content/xul/document/test/Makefile.in,v <-- Makefile.in
new revision: 1.7; previous revision: 1.6
done
RCS file: /cvsroot/mozilla/content/xul/document/test/test_bug418216.xul,v
done
Checking in content/xul/document/test/test_bug418216.xul;
/cvsroot/mozilla/content/xul/document/test/test_bug418216.xul,v <-- test_bug418216.xul
initial revision: 1.1
done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → Firefox 3 beta4
Comment 13•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008022704 Minefield/3.0b4pre. Also verified on Win XP.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•