Bug 418216 - "Back button greys when toolbar reset to default" [p=arenevier@fdn.fr (arno.) r=Enn sr=Neil a=blocking-firefox3+]